k8s/api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  namespace: fiap-vehicles
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
